# anime_clasher_rust_wasm

./: Cargo.toml  README.md
src/: element.rs  lib.rs
src/player/: mod.rs  player.rs  player_control.rs
